tests/snapshots/output__local_forget_service.snap
---
source: tests/output.rs
expression: "read_to_string(normal_dir.path().join(\"restic-myrepo-forget.service\"))?"
---
# generated by restic-generator
[Unit]
Description=forget / from /my/restic/repo
SourcePath=example-config.toml

[Service]
Environment=RESTIC_REPOSITORY="/my/restic/repo"
Environment=RESTIC_PASSWORD_COMMAND="pass restic/myrepo"
Type=oneshot
ExecStart=restic forget --host="laptop" --path="/" --keep-last="42" --keep-hourly="24" --keep-daily="7" --keep-weekly="3" --keep-monthly="12" --keep-yearly="100" --keep-tag="important" --keep-within="2y5m7d3h"
Nice=10
IOSchedulingClass=idle

