tests/snapshots/output__local_prune_service.snap
---
source: tests/output.rs
expression: "read_to_string(normal_dir.path().join(\"restic-myrepo-prune.service\"))?"
---
# generated by restic-generator
[Unit]
Description=Prune /my/restic/repo
SourcePath=example-config.toml

[Service]
Environment=RESTIC_REPOSITORY="/my/restic/repo"
Environment=RESTIC_PASSWORD_COMMAND="pass restic/myrepo"
Type=oneshot
ExecStart=restic prune
Nice=10
IOSchedulingClass=idle

