tests/snapshots/output__remote_backup_service.snap
---
source: tests/output.rs
expression: "read_to_string(normal_dir.path().join(\"restic-sftprepo-backup.service\"))?"

---
# generated by systemd-restic-generator
[Unit]
Description=backup / to sftp:user@host:/srv/restic-repo
SourcePath=example-config.toml
ConditionPathExists=/

[Service]
Environment=RESTIC_REPOSITORY="sftp:user@host:/srv/restic-repo"
Environment=RESTIC_PASSWORD_FILE="/my/password/file"
Type=oneshot
ExecStart=restic backup --host="laptop" --exclude="/home/*/.cache" --exclude="*~" /

